--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vueuse/core": "^6.0.0",
     "tailwindcss": "^2.2.7",
     "vue": "^3.2.6",
     "vue-router": "^4.0.2"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.396",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
@@ -36,7 +38,9 @@
     "sass": "^1.38.1",
     "sass-loader": "^12.1.0",
     "typescript": "^4.1.3",
-    "vite": "^2.5.1"
+    "unplugin-vue-components": "^0.14.11",
+    "vite": "^2.5.1",
+    "vite-plugin-icons": "^0.6.5"
   },
   "husky": {
     "hooks": {
